--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Barlow:wght@200;400;700&display=swap");
 
 :root {
-  // Color scheme courtesy of https://stephango.com/flexoki
+  /* Color scheme courtesy of https://stephango.com/flexoki */
   --bg: rgb(16, 15, 15);
   --tx: rgb(206, 205, 195);
   --ui: rgb(64, 62, 60);
@@ -118,14 +118,9 @@ p {
 
 h1,
 h2,
-h3,
-h4 {
+h3 {
   margin: 0;
   font-weight: var(--header-weight);
-}
-
-h2 {
-  margin-top: 50px;
 }
 
 h1 {
@@ -133,6 +128,7 @@ h1 {
 }
 
 h2 {
+  margin-top: 50px;
   font-size: 1.4em;
 }
 
