--- a/src/styles.css
+++ b/src/styles.css
@@ -25,6 +25,8 @@
   --header-weight: 700;
 
   --tech-table-columns: 1fr 1fr 1fr;
+  --employment-template: 1fr / 200px 200px 1fr;
+  --employment-gap: 0 20px;
 }
 @media screen and (max-width: 600px) {
   :root {
@@ -33,6 +35,18 @@
     --page-width: 100%;
     --tech-table-columns: 1fr;
     --header-font-size: 2.5em;
+    --employment-template: 1fr / 1fr 1fr 1fr;
+    --employment-gap: 20px;
+  }
+}
+@media screen and (min-width: 601px) and (max-width: 800px) {
+  :root {
+    --body-padding: 40px;
+    --font-size-baseline: 18px;
+    --page-width: 100%;
+    --tech-table-columns: 1fr 1fr 1fr;
+    --header-font-size: 2.5em;
+    --employment-template: 1fr / 1fr 1fr 1fr;
   }
 }
 
@@ -154,6 +168,6 @@ h3 {
 
 .employment-table {
   display: grid;
-  grid-template-columns: 200px 200px auto;
-  column-gap: 20px;
+  grid-template: var(--employment-template);
+  gap: var(--employment-gap);
 }
