--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Barlow:wght@200;400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Heebo:wght@200;400;700&display=swap");
 
 :root {
   /* Color scheme courtesy of https://stephango.com/flexoki */
@@ -18,7 +18,7 @@
   --body-padding: 100px;
   --page-width: 1000px;
 
-  --font-size-baseline: 20px;
+  --font-size-baseline: 18px;
   --header-font-size: 2em;
 
   --text-weight: 400;
@@ -28,25 +28,20 @@
   --employment-template: 1fr / 200px 200px 1fr;
   --employment-gap: 0 20px;
 }
+@media screen and (max-width: 800px) {
+  :root {
+    --body-padding: 40px;
+    --font-size-baseline: 16px;
+    --page-width: 100%;
+    --header-font-size: 2.5em;
+    --employment-template: 1fr / 1fr 1fr 1fr;
+  }
+}
 @media screen and (max-width: 600px) {
   :root {
     --body-padding: 20px;
-    --font-size-baseline: 18px;
-    --page-width: 100%;
     --tech-table-columns: 1fr;
-    --header-font-size: 2.5em;
-    --employment-template: 1fr / 1fr 1fr 1fr;
     --employment-gap: 20px;
-  }
-}
-@media screen and (min-width: 601px) and (max-width: 800px) {
-  :root {
-    --body-padding: 40px;
-    --font-size-baseline: 18px;
-    --page-width: 100%;
-    --tech-table-columns: 1fr 1fr 1fr;
-    --header-font-size: 2.5em;
-    --employment-template: 1fr / 1fr 1fr 1fr;
   }
 }
 
@@ -104,7 +99,7 @@ body {
 
   background: var(--bg);
   color: var(--tx);
-  font-family: "Barlow", Arial, Helvetica, sans-serif;
+  font-family: "Heebo", Arial, Helvetica, sans-serif;
   font-size: var(--font-size-baseline);
   font-weight: var(--text-weight);
 
