--- a/src/styles.css
+++ b/src/styles.css
@@ -3,9 +3,12 @@
 :root {
   /* Color scheme courtesy of https://stephango.com/flexoki */
   --bg: rgb(16, 15, 15);
+  --bg2: rgb(28, 27, 26);
+  --ui: rgb(40, 39, 38);
+  --ui2: rgb(52, 51, 49);
+  --ui3: rgb(64, 62, 60);
   --tx: rgb(206, 205, 195);
   --tx2: rgb(135, 133, 128);
-  --ui: rgb(64, 62, 60);
   --re: rgb(209, 77, 65);
   --or: rgb(218, 112, 44);
   --ye: rgb(208, 162, 21);
@@ -17,16 +20,21 @@
 
   --body-padding: 100px;
   --page-width: 1000px;
+  --section-spacing: 50px;
 
   --font-size-baseline: 18px;
-  --header-font-size: 2em;
+  --header-font-size: 6em;
+  --subheader-font-size: 2em;
+  --subsubheader-font-size: 1.5em;
 
   --text-weight: 400;
   --header-weight: 700;
 
   --tech-table-columns: 1fr 1fr 1fr;
   --employment-template: 1fr / 200px 200px 1fr;
-  --employment-gap: 0 20px;
+  --employment-gap: 4px 20px;
+  --technologies-padding: 50px;
+  --technologies-border-radius: 25px;
 }
 @media screen and (max-width: 800px) {
   :root {
@@ -42,7 +50,13 @@
     --body-padding: 20px;
     --tech-table-columns: 1fr;
     --employment-gap: 20px;
+    --technologies-padding: 40px;
+    --technologies-border-radius: 20px;
   }
+}
+
+::selection {
+  background: var(--ui3);
 }
 
 a {
@@ -115,11 +129,11 @@ main {
 
 hr {
   display: block;
-  max-width: var(--page-width);
+  width: 100%;
   height: 1px;
   border: none;
   background: var(--ui);
-  margin: 50px 0;
+  margin-bottom: var(--section-spacing);
 }
 
 ul {
@@ -140,17 +154,19 @@ h3 {
 
 h1 {
   font-size: var(--header-font-size);
+  max-width: var(--page-width);
 }
 
 h2 {
-  margin-top: 50px;
   margin-bottom: 20px;
-  font-size: 1.4em;
+  font-size: var(--subheader-font-size);
+  max-width: var(--page-width);
 }
 
 h3 {
-  font-size: 1.2em;
+  font-size: var(--subsubheader-font-size);
   font-weight: var(--text-weight);
+  max-width: var(--page-width);
 }
 
 .technologies-table {
@@ -159,10 +175,19 @@ h3 {
   grid-template-columns: var(--tech-table-columns);
   column-gap: 50px;
   max-width: var(--page-width);
+
+  padding: var(--technologies-padding);
+  box-sizing: border-box;
+  border-radius: var(--technologies-border-radius);
+  border: 1px solid var(--ui);
 }
 
 .employment-table {
   display: grid;
   grid-template: var(--employment-template);
   gap: var(--employment-gap);
+}
+
+section {
+  margin-bottom: var(--section-spacing);
 }
