--- a/src/styles.css
+++ b/src/styles.css
@@ -33,6 +33,8 @@
   --employment-gap: 4px 20px;
   --technologies-padding: 50px;
   --technologies-border-radius: 25px;
+
+  --canvas-display: initial;
 }
 @media screen and (max-width: 800px) {
   :root {
@@ -41,6 +43,7 @@
     --page-width: 100%;
     --header-font-size: 2.5em;
     --employment-template: 1fr / 1fr 1fr 1fr;
+    --canvas-display: none;
   }
 }
 @media screen and (max-width: 600px) {
@@ -105,24 +108,35 @@ body {
   padding: 0;
   margin: 0;
 
-  display: flex;
-  justify-content: center;
-  align-items: start;
-
   background: var(--bg);
   color: var(--tx);
-  font-family: "Heebo", Arial, Helvetica, sans-serif;
+  font-family: 'Heebo', Arial, Helvetica, sans-serif;
   font-size: var(--font-size-baseline);
   font-weight: var(--text-weight);
 
   line-height: 1.5;
 }
 
+#container {
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+
+  display: flex;
+  justify-content: center;
+  align-items: start;
+  z-index: 1;
+}
+
 main {
-  padding: var(--body-padding);
-  box-sizing: border-box;
   width: 100%;
   height: 100%;
+  max-width: var(--page-width);
+
+  padding: var(--body-padding);
+  box-sizing: border-box;
 }
 
 hr {
@@ -188,4 +202,18 @@ h3 {
 
 section {
   margin-bottom: var(--section-spacing);
+}
+
+#background {
+  position: fixed;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  display: var(--canvas-display);
+}
+
+#background-canvas {
+  width: 100%;
+  height: 100%;
 }
