--- a/src/styles.css
+++ b/src/styles.css
@@ -1,20 +1,20 @@
 :root {
   /* Color scheme courtesy of https://stephango.com/flexoki */
-  --bg: rgb(16, 15, 15);
-  --bg2: rgb(28, 27, 26);
-  --ui: rgb(40, 39, 38);
-  --ui2: rgb(52, 51, 49);
-  --ui3: rgb(64, 62, 60);
-  --tx: rgb(206, 205, 195);
-  --tx2: rgb(135, 133, 128);
-  --re: rgb(209, 77, 65);
-  --or: rgb(218, 112, 44);
-  --ye: rgb(208, 162, 21);
-  --gr: rgb(135, 154, 57);
-  --cy: rgb(58, 169, 159);
-  --bl: rgb(67, 133, 190);
-  --pu: rgb(139, 126, 200);
-  --ma: rgb(206, 93, 151);
+  --bg: oklch(16.96% 0.002 17.32);
+  --bg2: oklch(22.28% 0.002 67.7);
+  --ui: oklch(27.34% 0.002 67.73);
+  --ui2: oklch(32.14% 0.004 84.58);
+  --ui3: oklch(36.51% 0.004 67.69);
+  --tx: oklch(84.63% 0.014 102.05);
+  --tx2: oklch(61.69% 0.008 88.67);
+  --re: oklch(59.7% 0.169 28.38);
+  --or: oklch(65.76% 0.154 49.3);
+  --ye: oklch(73.46% 0.146 87.46);
+  --gr: oklch(65.13% 0.124 119.38);
+  --cy: oklch(67.01% 0.1 186.58);
+  --bl: oklch(59.88% 0.11 247);
+  --pu: oklch(63.48% 0.11 291);
+  --ma: oklch(63.48% 0.156 350.47);
 
   --body-padding: 100px;
   --page-width: 1000px;
