--- a/src/styles.css
+++ b/src/styles.css
@@ -125,7 +125,7 @@ body {
   bottom: 0;
 
   display: flex;
-  justify-content: center;
+  justify-content: start;
   align-items: start;
   z-index: 1;
 }
